<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/sharedmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/custom_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/body" />

            <CheckBox
                android:id="@+id/add_lat_lon_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/add_lat_lon_location" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/add_address_location"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/add_geocoded_location" />

                <CheckBox
                    android:id="@+id/add_url_location"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/add_urllink_location" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>